changed awkward import in notebooks

--- a/notebooks/PlotEachPV.ipynb
+++ b/notebooks/PlotEachPV.ipynb
@@ -2,9 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tue Jun  1 17:26:41 2021       \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 440.64.00    Driver Version: 440.64.00    CUDA Version: 10.2     |\n",
+      "|-------------------------------+----------------------+----------------------+\n",
+      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+      "|===============================+======================+======================|\n",
+      "|   0  TITAN V             Off  | 00000000:03:00.0 Off |                  N/A |\n",
+      "| 28%   41C    P8    24W / 250W |   9057MiB / 12066MiB |      0%      Default |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "|   1  Tesla P100-PCIE...  Off  | 00000000:83:00.0 Off |                    0 |\n",
+      "| N/A   41C    P0    28W / 250W |     10MiB / 16280MiB |      0%      Default |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "|   2  TITAN V             Off  | 00000000:84:00.0 Off |                  N/A |\n",
+      "| 31%   45C    P8    28W / 250W |   9749MiB / 12066MiB |      0%      Default |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "                                                                               \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| Processes:                                                       GPU Memory |\n",
+      "|  GPU       PID   Type   Process name                             Usage      |\n",
+      "|=============================================================================|\n",
+      "|    0     22836      C   ...a/conda/envs/goofit-june2020/bin/python  9045MiB |\n",
+      "|    2     33919      C   ...a/conda/envs/goofit-june2020/bin/python  9737MiB |\n",
+      "+-----------------------------------------------------------------------------+\n"
+     ]
+    }
+   ],
    "source": [
     "!nvidia-smi"
    ]
@@ -18,10 +49,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -31,10 +60,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -50,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,9 +98,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 available GPUs (initially using device 0):\n",
+      "  0 TITAN V\n"
+     ]
+    }
+   ],
    "source": [
     "device = select_gpu(2)"
    ]
@@ -87,9 +123,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading data...\n",
+      "Loaded data/Oct03_20K_val.h5 in 3.666 s\n",
+      "Constructing 100 event dataset took 5.047 s\n"
+     ]
+    }
+   ],
    "source": [
     "validation = collect_data('data/Oct03_20K_val.h5',\n",
     "                          batch_size=1,\n",
@@ -100,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,18 +174,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16 6 0 12 18 28 29 12 23 16 17 79 20 18 37 0 12 43 11 21 38 0 35 23 22 22 23 33 27 16 0 23 17 56 17 38 16 45 12 12 12 22 22 11 12 44 17 45 6 17 39 28 33 17 39 62 53 29 6 6 5 46 53 34 22 29 17 63 17 12 18 22 50 18 28 12 41 29 22 34 35 17 42 11 57 27 16 22 23 33 23 33 16 45 30 0 6 16 28 17\n"
+     ]
+    }
+   ],
    "source": [
     "print(*np.sum(np.isnan(validation.dataset.tensors[1].cpu().numpy()), 1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded data/Oct03_20K_val.h5 in 0.03177 s\n",
+      "PV.n.shape =     (20000,)\n",
+      "PV.n[0].shape =  7\n",
+      "PV.x[0] =        0.0067699254 -0.05386329 0.0018882935 -0.035012268 -0.010384369 0.045956675 -0.073287025\n",
+      "PV.y[0] =        0.00076032506 -0.001020242 -0.03236149 0.043514606 -0.08862019 -0.06502226 -0.0052683405\n",
+      "PV.z[0] =        163.4873 80.101074 1.0544614 -36.59213 115.55979 48.95428 126.700806\n",
+      "PV.n[0] =        34 10 4 23 4 29 4\n",
+      "PV.cat[0] =      1 1 0 1 0 1 0\n"
+     ]
+    }
+   ],
    "source": [
     "PV = collect_truth('data/Oct03_20K_val.h5', pvs=True)\n",
     "print('PV.n.shape =    ',  PV.n.shape)\n",
@@ -153,11 +222,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import h5py, awkward"
+    "import h5py\n",
+    "try:\n",
+    "    import awkward0 as awkward\n",
+    "except ModuleNotFoundError:\n",
+    "    import awkward"
    ]
   },
   {
@@ -191,8 +264,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import awkward, h5py, numpy as np\n",
-    "\n",
     "simple = awkward.JaggedArray.fromcounts([2,3], [1.,2,3,4,5])\n",
     "\n",
     "with h5py.File('example.h5', mode='w') as f:\n",
@@ -232,15 +303,6 @@
    "outputs": [],
    "source": [
     "PV.n.flatten().max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import awkward"
    ]
   },
   {
@@ -564,5 +626,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
