--- a/notebooks/talks/PlotEachPVPaper.ipynb
+++ b/notebooks/talks/PlotEachPVPaper.ipynb
@@ -20,7 +20,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -33,7 +36,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -191,7 +197,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import awkward, h5py, numpy as np\n",
+    "try:\n",
+    "    import awkward0 as awkward\n",
+    "except ModuleNotFoundError:\n",
+    "    import awkward\n",
+    "import h5py, numpy as np\n",
     "\n",
     "simple = awkward.JaggedArray.fromcounts([2,3], [1.,2,3,4,5])\n",
     "\n",
@@ -232,15 +242,6 @@
    "outputs": [],
    "source": [
     "PV.n.flatten().max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import awkward"
    ]
   },
   {
@@ -594,5 +595,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
