--- a/notebooks/read_Marians_BastilleDay_file.ipynb
+++ b/notebooks/read_Marians_BastilleDay_file.ipynb
@@ -7,16 +7,17 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import awkward\n",
+    "try:\n",
+    "    import awkward0 as awkward\n",
+    "except ModuleNotFoundError:\n",
+    "    import awkward\n",
     "import h5py"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -467,5 +468,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
