changed uproot import in notebooks

--- a/notebooks/PVPlotter.ipynb
+++ b/notebooks/PVPlotter.ipynb
@@ -6,7 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import uproot\n",
+    "try:\n",
+    "    import uproot3 as uproot\n",
+    "except ModuleNotFoundError:\n",
+    "    import uproot\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np"
    ]
@@ -143,5 +146,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
