--- a/notebooks/RunModel_19Nov2020_SimpleCNN-to-AllCNN.ipynb
+++ b/notebooks/RunModel_19Nov2020_SimpleCNN-to-AllCNN.ipynb
@@ -10,7 +10,7 @@
     "## with %matplotlib notebook: seems to require ipympl as part of environment, either\n",
     "## part of the conda environment or \"pip install ipympl\"\n",
     "## otherwise, does not show ANY plots in notebook, plt.savefig() works\n",
-    "%matplotlib notebook  \n",
+    "%matplotlib notebook\n",
     "##%matplotlib inline    ## --plt.savefig()  works, but re-sizing does NOT"
    ]
   },
@@ -42,7 +42,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wed Jun  9 09:15:06 2021       \n",
+      "Wed Jun  9 10:51:58 2021       \n",
       "+-----------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 440.64.00    Driver Version: 440.64.00    CUDA Version: 10.2     |\n",
       "|-------------------------------+----------------------+----------------------+\n",
@@ -50,20 +50,20 @@
       "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
       "|===============================+======================+======================|\n",
       "|   0  TITAN V             Off  | 00000000:03:00.0 Off |                  N/A |\n",
-      "| 29%   47C    P2   106W / 250W |   9561MiB / 12066MiB |     78%      Default |\n",
+      "| 28%   41C    P8    24W / 250W |   7101MiB / 12066MiB |      0%      Default |\n",
       "+-------------------------------+----------------------+----------------------+\n",
       "|   1  Tesla P100-PCIE...  Off  | 00000000:83:00.0 Off |                    0 |\n",
-      "| N/A   42C    P0    35W / 250W |      0MiB / 16280MiB |      0%      Default |\n",
+      "| N/A   43C    P0    36W / 250W |      0MiB / 16280MiB |      0%      Default |\n",
       "+-------------------------------+----------------------+----------------------+\n",
       "|   2  TITAN V             Off  | 00000000:84:00.0 Off |                  N/A |\n",
-      "| 29%   44C    P0    36W / 250W |      0MiB / 12066MiB |      0%      Default |\n",
+      "| 72%   78C    P0    54W / 250W |      0MiB / 12066MiB |      8%      Default |\n",
       "+-------------------------------+----------------------+----------------------+\n",
       "                                                                               \n",
       "+-----------------------------------------------------------------------------+\n",
       "| Processes:                                                       GPU Memory |\n",
       "|  GPU       PID   Type   Process name                             Usage      |\n",
       "|=============================================================================|\n",
-      "|    0      6210      C   ...a/conda/envs/goofit-june2020/bin/python  9549MiB |\n",
+      "|    0     11010      C   ...a/conda/envs/goofit-june2020/bin/python  7089MiB |\n",
       "+-----------------------------------------------------------------------------+\n"
      ]
     }
@@ -137,10 +137,7 @@
     "# From model/training.py\n",
     "from model.training import trainNet, select_gpu, Results\n",
     "\n",
-    "# From model/models.py\n",
-    "##  will start with model from TwoFeatures_CNN6Layer_A in the first instance\n",
-    "##  see relevant cell below\n",
-    "\n",
+    "# From model directory\n",
     "from model.models_mjp_19Nov20 import All_CNN6Layer_A as ModelA\n",
     "from model.models_mjp_19Nov20 import All_CNN6Layer_E as ModelE\n",
     "from model.models_mjp_19Nov20 import All_CNN8Layer_W as ModelW\n",
@@ -152,9 +149,11 @@
     "# From model/utilities.py\n",
     "from model.utilities import load_full_state, count_parameters, Params\n",
     "\n",
+    "# Generates plots Mike likes\n",
     "from model.plots import dual_train_plots, replace_in_ax\n",
     "\n",
     "## adds image of model architecture\n",
+    "# Current not implemented\n",
     "import hiddenlayer as HL"
    ]
   },
@@ -208,7 +207,7 @@
    "outputs": [],
    "source": [
     "# params order - batch size, epochs, lr, epoch_start (which is usually set to 0)\n",
-    "args = Params(128, 100, 1e-4, 220)"
+    "args = Params(128, 4, 5e-5, 0)"
    ]
   },
   {
@@ -232,13 +231,13 @@
      "output_type": "stream",
      "text": [
       "Loading data...\n",
-      "Loaded /share/lazy/sokoloff/ML-data_A/Aug14_80K_train.h5 in 12.55 s\n",
-      "Loaded /share/lazy/sokoloff/ML-data_AA/Oct03_80K_train.h5 in 12.29 s\n",
-      "Loaded /share/lazy/will/ML_mdsA/June30_2020_80k_1.h5 in 12.28 s\n",
-      "Constructing 240000 event dataset took 5.615 s\n",
+      "Loaded /share/lazy/sokoloff/ML-data_A/Aug14_80K_train.h5 in 12.61 s\n",
+      "Loaded /share/lazy/sokoloff/ML-data_AA/Oct03_80K_train.h5 in 12.35 s\n",
+      "Loaded /share/lazy/will/ML_mdsA/June30_2020_80k_1.h5 in 12.31 s\n",
+      "Constructing 240000 event dataset took 7.248 s\n",
       "Loading data...\n",
-      "Loaded /share/lazy/sokoloff/ML-data_AA/Oct03_20K_val.h5 in 3.093 s\n",
-      "Constructing 9984 event dataset took 0.1001 s\n"
+      "Loaded /share/lazy/sokoloff/ML-data_AA/Oct03_20K_val.h5 in 3.068 s\n",
+      "Constructing 9984 event dataset took 0.105 s\n"
      ]
     },
     {
@@ -264,7 +263,7 @@
     "train_loader = collect_data('/share/lazy/sokoloff/ML-data_A/Aug14_80K_train.h5',\n",
     "                             '/share/lazy/sokoloff/ML-data_AA/Oct03_80K_train.h5',\n",
     "#                             '/share/lazy/sokoloff/ML-data_AA/Oct03_40K_train.h5',\n",
-    "                             '/share/lazy/will/ML_mdsA/June30_2020_80k_1.h5',\n",
+    "#                             '/share/lazy/will/ML_mdsA/June30_2020_80k_1.h5',\n",
     "#                             '/share/lazy/will/ML_mdsA/June30_2020_80k_3.h5',\n",
     "#                             '/share/lazy/will/ML_mdsA/June30_2020_80k_4.h5',\n",
     "#                             '/share/lazy/will/ML_mdsA/June30_2020_80k_5.h5',\n",
@@ -380,6 +379,7 @@
    ],
    "source": [
     "print(\"Let's use\", torch.cuda.device_count(), \"GPUs!\")\n",
+    "# if using more than one device, set up parallel data processing (hasn't been used in a long time)\n",
     "if torch.cuda.device_count() > 1:\n",
     "    model = torch.nn.DataParallel(model)"
    ]
@@ -399,9 +399,7 @@
     }
    ],
    "source": [
-    "##  mds 200121 loss = Loss(epsilon=1e-5,coefficient=1.0)\n",
     "loss = Loss(epsilon=1e-5,coefficient=2.5)\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=args.lr)\n",
     "\n",
     "##  use the first five layers from a pre-existing model\n",
     "##  see example at https://discuss.pytorch.org/t/how-to-load-part-of-pre-trained-model/1113\n",
@@ -410,8 +408,22 @@
     "#path = 'run_stats.pyt'\n",
     "#load_full_state(model, optimizer, path, freeze_weights=True)\n",
     "# For other pretrained models, go to MLFlow and find the path for \"run_stats.pyt\"\n",
-    "pretrained_dict = '/share/lazy/pv-finder_model_repo/12/6cd53f928a1d4f03b12605f0f4f07c23/artifacts/run_stats.pyt'\n",
-    "load_full_state(model, optimizer, pretrained_dict, freeze_weights=True)"
+    "#pretrained_dict = '/share/lazy/pv-finder_model_repo/12/6cd53f928a1d4f03b12605f0f4f07c23/artifacts/run_stats.pyt'\n",
+    "#load_full_state(model, pretrained_dict, freeze_weights=True)\n",
+    "\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=args.lr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check weights after loading\n",
+    "# used for debugging; comment out otherwise\n",
+    "#params = [v for k, v in model.named_parameters()]\n",
+    "#print('WEIGHTS LOADED: ', params, file=open(\"output_2.txt\", \"a\"))"
    ]
   },
   {
@@ -423,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -457,7 +469,7 @@
        ")"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1262,7 +1274,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='65e2cf38-0917-452b-a6be-1d716a429012'></div>"
+       "<div id='2b54ee30-100d-4dbf-b223-8a5f751c19bf'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1284,110 +1296,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "for model:  ACN_2i4_10L_DenseNet_BN(\n",
-      "  (conv1): Conv1d(1, 25, kernel_size=(25,), stride=(1,), padding=(12,))\n",
-      "  (conv2): Conv1d(26, 20, kernel_size=(15,), stride=(1,), padding=(7,))\n",
-      "  (conv3): Conv1d(46, 15, kernel_size=(15,), stride=(1,), padding=(7,))\n",
-      "  (conv4): Conv1d(61, 15, kernel_size=(15,), stride=(1,), padding=(7,))\n",
-      "  (conv5): Conv1d(76, 10, kernel_size=(15,), stride=(1,), padding=(7,))\n",
-      "  (conv6): Conv1d(86, 10, kernel_size=(15,), stride=(1,), padding=(7,))\n",
-      "  (conv7): Conv1d(96, 10, kernel_size=(15,), stride=(1,), padding=(7,))\n",
-      "  (conv8): Conv1d(106, 5, kernel_size=(9,), stride=(1,), padding=(4,))\n",
-      "  (conv9): Conv1d(111, 1, kernel_size=(5,), stride=(1,), padding=(2,))\n",
-      "  (conv10): Conv1d(112, 1, kernel_size=(91,), stride=(1,), padding=(45,))\n",
-      "  (dropout1): Dropout(p=0.15, inplace=False)\n",
-      "  (dropout2): Dropout(p=0.35, inplace=False)\n",
-      "  (bn1): BatchNorm1d(25, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (bn2): BatchNorm1d(20, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (bn3): BatchNorm1d(15, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (bn4): BatchNorm1d(15, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (bn5): BatchNorm1d(10, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (bn6): BatchNorm1d(10, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (bn7): BatchNorm1d(10, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (bn8): BatchNorm1d(5, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (bn9): BatchNorm1d(1, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      "  (bn10): BatchNorm1d(1, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
-      ")\n",
-      "epoch_start 220\n",
-      "batch_size 128\n",
-      "epochs 100\n",
-      "lr 0.0001\n",
-      "Number of batches: train = 1875, val = 78\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/michael24peters/pv-finder/notebooks/model/training.py:95: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
-      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
-      "  file=sys.stderr,\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8882118c7d5c48cf8a4dbd2e68fe6638",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Epochs', layout=Layout(flex='2'), style=ProgressStyle(des…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3bc78ac521ed47faaea48344594b26d0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Training', layout=Layout(flex='2'), max=1875.0, style=Pro…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 220: train=1318.01, val=1315.36, took 249.16 s\n",
-      "  Validation Found 351 of 54504, added 9474 (eff 0.64%) (0.949 FP/event)\n",
-      "Result epoch:  220\n",
-      "Average Eff:  0.0\n",
-      "Average FP Rate:  0.0\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b69a3e2a9b914277a2d97a33b4d763d0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, description='Training', layout=Layout(flex='2'), max=1875.0, style=Pro…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "avgEff = 0.0\n",
     "avgFP = 0.0\n",
-    "print('for model: ', model)   \n",
+    "\n",
+    "print('for model: ', model)\n",
     "run_name = 'ACN_2i4_10L_DenseNet_BN'\n",
+    "\n",
     "# Create an mlflow run\n",
     "with mlflow.start_run(run_name=run_name) as run:\n",
     "    # Log parameters of the model\n",
@@ -1395,8 +1311,8 @@
     "        print(key, value)\n",
     "        mlflow.log_param(key, value)\n",
     "    \n",
-    "    # Log parameter count in the model\n",
-    "    mlflow.log_param('Parameters', count_parameters(model))\n",
+    "    # Log parameter count in the model (currently obsolete?)\n",
+    "#    mlflow.log_param('Parameters', count_parameters(model))\n",
     "    \n",
     "    # Begin run\n",
     "    for result in trainNet(model, optimizer, loss,\n",
